// Copyright (c) 2018-2021, AT&T Intellectual Property.  All rights reserved.
//
// SPDX-License-Identifier: LGPL-2.1-only
//
// Cross connect protobuf definitions
//

syntax="proto2";

option go_package = "github.com/danos/vyatta-dataplane/protobuf/go/XConnectConfig";

message XConnectConfig {
	enum CommandType {
	     ADD    = 0;
	     REMOVE = 1;
	     UPDATE = 2;
	}
	enum XConnectType {
		ETHER   = 0;
		L2TPETH = 1;
	}
	optional CommandType cmd   = 1;
	optional string dp_ifname  = 2;
	optional string new_ifname = 3;
	optional XConnectType type = 4;
	optional uint32 ttl        = 5;
}
